# innerwarden-mesh

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docker-test/: Dockerfile  docker-compose-prod.yml  docker-compose.yml
examples/: mesh_node.rs
src/: config.rs  crypto.rs  lib.rs  node.rs  peer.rs  persistence.rs  signal.rs  staging.rs  transport.rs  validation.rs
