[package]
name = "innerwarden-mesh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Collaborative defense network for Inner Warden — game-theory-based threat signal sharing between nodes."
repository = "https://github.com/InnerWarden/innerwarden-mesh"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
