[package]
name = "innerwarden-mesh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Collaborative defense network for Inner Warden — game-theory-based threat signal sharing between nodes."
repository = "https://github.com/InnerWarden/innerwarden-mesh"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
